--- a/src/main/resources/templates/program/accept.html
+++ b/src/main/resources/templates/program/accept.html
@@ -2,14 +2,73 @@
 <html>
 <head>
 <meta charset="UTF-8">
+  
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 <title>Insert title here</title>
+ <style>
+         
+		.container {
+			background-color: #EAEAEA;
+			border: 1.5px solid #1F9CB3;
+			width: 70%;
+			height: auto;
+ 			border-radius: 10q;
+			padding: 20px; /* h3 요소 아래 여백 추가 */
+			margin: 0 auto;
+			margin-top: 30px;
+			display: flex;
+			flex-direction : column;
+			
+		}
+       
+
+        button {
+            padding: 10px 20px;
+            font-size: 14px;
+        }
+        
+        body {
+            text-align: center; /* 전체 내용을 가운데 정렬 */
+        }
+    </style>
 </head>
 <body>
-	<h3>수락창</h3>
+	<div class="container">
+ <h2><span class="badge" style="background-color: #E91E63;" >예약정보</span></h2> 
+
+	
+	<div class="form-floating mb-3">
+	  <input type="text" readonly class="form-control-plaintext" id="floatingPlaintextInput"  th:value="${reservation.userid}">
+	  <label for="floatingPlaintextInput" >예약자</label>
+	</div>
+	<div class="form-floating mb-3">
+	  <input type="text" readonly class="form-control-plaintext" id="floatingPlaintextInput"  th:value="${reservation.start_date}">
+	  <label for="floatingPlaintextInput" >신청기간</label>
+	</div>
+	
+	<table>
+	 
+		<tr>
+			<th>제목</th>
+			<td colspan="3" th:text="${program.title}"></td>
+			 
+		</tr>
+		
+	</table>
+	<hr>
+	체크리스트
 	
 	
-<table>
-	<h3>프로그램 정보</h3>
+	
+	<form th:action="@{/program/accept}" method="post">	
+	<input type="hidden" name="reserNum" th:value="${reservation.reserNum}">
+    <button type="submit"  class="btn btn-primary" style="background-color: #1F9CB3; border: 0;">수락하기</button>
+	</form>
+</div>
+	
+		<!--<h3>프로그램 정보</h3>
 		<tr>
 			<th>글번호</th>
 			<td style="width: 80px;" th:text="${program.programNum}"></td>
@@ -23,35 +82,8 @@
 			 
 		</tr>
 	</table>	
+-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
-	<table>
-	<h3>예약정보</h3>
-		<tr>
-			<th>예약번호</th>
-			<td style="width: 80px;" th:text="${reservation.reserNum}"></td>
-			 
-			<th>예약자</th>
-			<td style="width: 80px;" th:text="${reservation.userid}"></td>
-			 
-			<th>신청기간</th>
-			<td style="width: 150px;" th:text="${reservation.start_date}"></td>
-			
-			<th>예약상태</th>
-			<td style="width: 150px;" th:text="${reservation.status}"></td>
-			
-			
-		</tr>
-		<tr>
-			<th>제목</th>
-			<td colspan="3" th:text="${program.title}"></td>
-			 
-		</tr>
-		
-	</table>
-	
-	<form th:action="@{/program/accept}" method="post">	
-	<input type="hidden" name="reserNum" th:value="${reservation.reserNum}">
-    <button type="submit">수락하기</button>
-	</form>
 </body>
 </html>
