--- a/src/main/resources/templates/program/apply.html
+++ b/src/main/resources/templates/program/apply.html
@@ -23,73 +23,67 @@
 
 	<hr><br>
 
-	<form class="apply-class" th:action="@{/program/checklist}" method="post">
-		<input type="hidden" name="start_date" th:value="${start_date}">
-		<input type="hidden" name="end_date" th:value="${end_date}">
-		<input type="hidden" name="programNum" th:value="${program != null ? program.programNum : ''}" />
-		<input type="hidden" name="totalPrice" th:value="${program.price}">
-
-		<div class="checklist-container">
-			<h3>게스트용 체크리스트</h3>
-			<div class="two-column-checklist">
-				<label><input type="checkbox" name="petFriendly" value="1" th:checked="${checklist.petFriendly}">반려동물 동반 여부</label>
-				<label><input type="checkbox" name="allergyFriendly" value="1">알러지 유무 (체크 시 요청사항에 입력)</label>
-				<label><input type="checkbox" name="chronicIllness" value="1">지병 유무 (체크 시 요청사항에 입력)</label>
-				<label><input type="checkbox" name="foodPreference" value="1">기피하는 음식 유무 (체크 시 요청사항에 입력)</label>
-				<label><input type="checkbox" name="privateTime" value="1">개인시간 원하는지 여부 (체크 시 요청사항에 입력)</label>
-				<label><input type="checkbox" name="smoking" value="1">흡연</label>
-				<label><input type="checkbox" name="" value="1">일본어</label><!--여기부터 추가-->
-				<label><input type="checkbox" name="" value="1">영어</label>
-				<label><input type="checkbox" name="" value="1">한국어</label>
+	<form th:action="@{/program/payment}" method="post">
+		<div class="apply-class">
+			<div class="checklist-container">
+				<h3>게스트용 체크리스트</h3>
+				<div class="two-column-checklist">
+					<label><input type="checkbox" name="petFriendly" value="1" th:checked="${checklist?.petFriendly == 1}">반려동물 동반 여부</label>
+					<label><input type="checkbox" name="allergyFriendly" value="1">알러지 유무 (체크 시 요청사항에 입력)</label>
+					<label><input type="checkbox" name="chronicIllness" value="1">지병 유무 (체크 시 요청사항에 입력)</label>
+					<label><input type="checkbox" name="foodPreference" value="1">기피하는 음식 유무 (체크 시 요청사항에 입력)</label>
+					<label><input type="checkbox" name="privateTime" value="1">개인시간 원하는지 여부 (체크 시 요청사항에 입력)</label>
+					<label><input type="checkbox" name="smoking" value="1">흡연</label>
+					<label><input type="checkbox" name="" value="1">일본어</label><!--여기부터 추가-->
+					<label><input type="checkbox" name="" value="1">영어</label>
+					<label><input type="checkbox" name="" value="1">한국어</label>
+				</div>
 			</div>
 		</div>
-
-		<div class="right-align">
-			<button type="submit">저장</button>
-		</div>
-	</form>
-
 <br><br>
 
-	<form class="apply-class" th:action="@{/program/payment}" method="post">
 		<br><br>
-		<table>
-			<tr>
-				<th>start_date</th>
 
-				<td>
-					<pre th:text="${start_date}"></pre>
-				</td>
-			</tr>
+		<div class="apply-class">
+			<table>
+				<tr>
+					<th>start_date</th>
 
-			<tr>
-				<th>end_date</th>
+					<td>
+						<pre th:text="${start_date}"></pre>
+					</td>
+				</tr>
 
-				<td>
-					<pre th:text="${end_date}"></pre>
-				</td>
-			</tr>
-			<tr>
-				<th>가격</th>
+				<tr>
+					<th>end_date</th>
 
-				<td>
-					<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span> x 5박</span>
-					<span> = </span>
-					<span class="price-total">₩<span th:text="${#numbers.formatDecimal(program.price * 5, 0, 'COMMA', 0, 'POINT')}"></span></span>
-				</td>
-			</tr>
-			<tr>
-				<th>요청사항</th>
-				<td><textarea name = "request"></textarea></td>
-			</tr>
-		</table>
-		<input type="hidden" name="start_date" th:value="${start_date}">
-		<input type="hidden" name="end_date" th:value="${end_date}">
-		<input type="hidden" name="programNum" th:value="${program.programNum}">
-		<input type="hidden" name="totalPrice" th:value="${program.price}">
+					<td>
+						<pre th:text="${end_date}"></pre>
+					</td>
+				</tr>
+				<tr>
+					<th>가격</th>
 
-		<div class="right-align">
-			<button type="submit" >예약하기</button>
+					<td>
+						<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span> x 5박</span>
+						<span> = </span>
+						<span class="price-total">₩<span th:text="${#numbers.formatDecimal(program.price * 5, 0, 'COMMA', 0, 'POINT')}"></span></span>
+					</td>
+				</tr>
+				<tr>
+					<th>요청사항</th>
+					<td><textarea name = "request"></textarea></td>
+				</tr>
+			</table>
+			<input type="hidden" name="start_date" th:value="${start_date}">
+			<input type="hidden" name="end_date" th:value="${end_date}">
+			<input type="hidden" name="programNum" th:value="${program != null ? program.programNum : ''}" />
+			<input type="hidden" name="totalPrice" th:value="${program.price}">
+
+			<div class="right-align">
+				<button type="submit" >예약하기</button>
+			</div>
+
 		</div>
 	</form>
 	<br>
