--- a/src/main/resources/templates/member/programReview.html
+++ b/src/main/resources/templates/member/programReview.html
@@ -7,6 +7,11 @@
 <body>
 
 <h3>내 호스트 리뷰</h3>
+<!-- 평균 별점 표시 -->
+<div>
+    <!-- 별점 평균 계산 -->
+  <pre th:text="${hostAvg}"></pre>
+</div>
 	<table>
 		<tr th:each="hostReview: ${hostReview}">
 			<th th:text="${hostReview.reviewerID}"></th>
@@ -14,6 +19,8 @@
 			<td th:text="${hostReview.content}"> </td>
 		</tr>
 	</table>
+	
+	
  <h3>내 프로그램 리뷰</h3>
 	
 <div class="form-floating mb-3"  th:each="programReview: ${programReview}">
