--- a/src/main/resources/static/css/header_style.css
+++ b/src/main/resources/static/css/header_style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=IBM+Plex+Sans+KR:wght@300;400;600;700&family=Jua&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
 :root {
     --primary-color: #1F9CB3; /* 주 색상 */
     --secondary-color: #DF8664; /* 보조 색상 */
@@ -13,7 +14,7 @@
 
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+	font-family: 'IBM Plex Sans KR', sans-serif;
 }
 
 header {
