--- a/src/main/resources/static/css/main/reviewWrite.css
+++ b/src/main/resources/static/css/main/reviewWrite.css
@@ -26,29 +26,8 @@
         margin-bottom: 15px;
     }
 
-    .stars {
-        display: inline-block;
-    }
-
-    .stars input {
-        display: none;
-    }
-
-    .stars label {
-        font-size: 24px;
-        color: #ccc;
-        cursor: pointer;
-        display: inline-block;
-    }
-
-    .stars label:before {
-        content: '★';
-        margin-right: 5px;
-    }
-
-    .stars input:checked ~ label {
-        color: #ffcc00;
-    }
+   
+    
 
     .right-align {
         text-align: right;
@@ -90,3 +69,57 @@
  
       
   }
+  
+  /*//////////////////////////////////////////////////*/
+  .blind {
+  position: absolute;
+  overflow: hidden;
+  margin: -1px;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  border: none;
+  clip: rect(0, 0, 0, 0);
+}
+
+.startRadio {
+  display: inline-block;
+  overflow: hidden;
+  height: 40px;
+  &:after {
+    content:  '★';
+    display: block;
+    position: relative;
+    z-index: 10;
+    height: 40px;
+   
+    background-size: contain;
+    pointer-events: none;
+  }
+  &__box {
+    position: relative;
+    z-index: 1;
+    float: left;
+    width: 20px;
+    height: 40px;
+    cursor: pointer;
+    input {
+      opacity: 0 !important;
+      height: 0 !important;
+      width: 0 !important;
+      position: absolute !important;
+
+      &:checked + .startRadio__img {
+        background-color: #ffcc00 ;
+      }
+    }
+  }
+  &__img {
+    display: block;
+    position: absolute;
+    right: 0;
+    width: 500px;
+    height: 40px;
+    pointer-events: none;
+  }
+}
