--- a/src/main/resources/templates/member/myProgram.html
+++ b/src/main/resources/templates/member/myProgram.html
@@ -1,79 +1,143 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta name="viewport">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-<title>Insert title here</title>
-<style>
- .btn{
-  background-color: #1F9CB3;
-  border: none;
-}
+	<title>Insert title here</title>
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=IBM+Plex+Sans+KR:wght@300;400;600;700&family=Jua&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
+	
+		body {
+			font-family: 'IBM Plex Sans KR', sans-serif;
+		}
 
-.btn:hover {
-      background-color:#E91E63;
-       transition: 0.5s;
-  }
-  
-   .container {
-    display: flex;
-     justify-content: left;
-      justify-content: flex-start;
-	flex-wrap: wrap;
-  }
+		.btn {
+			background-color: #1F9CB3;
+			border: none;
+		}
 
-  .card {
-    /*  flex: 1;각 박스가 동일한 너비를 가지도록 */
-    margin: 10px;
-    width: 30%;
-      
-  }
-</style>
+		.btn:hover {
+			background-color: #E91E63;
+			transition: 0.5s;
+		}
+
+		.container {
+			display: flex;
+			justify-content: left;
+			justify-content: flex-start;
+			flex-wrap: wrap;
+		}
+
+		.card {
+			/*  flex: 1;각 박스가 동일한 너비를 가지도록 */
+			margin: 10px;
+			width: 30%;
+
+		}
+
+		#title {
+			font-size: 25px;
+			font-weight: 600;
+
+		}
+
+		.stars {
+			color: gold;
+			/* 별점 색상 설정 */
+			display: inline-block;
+		}
+
+		.fa-star {
+			font-size: 20px;
+			/* 별 아이콘 크기 설정 */
+		}
+
+		#avgStar {
+			color: gold;
+			font-size: 35px;
+
+		}
+	</style>
+	<link rel="stylesheet" th:href="@{/css/main/write.css}">
+	<link rel="stylesheet" th:href="@{/css/main/detail.css}">
 </head>
+
 <body>
-<h3>내 프로그램 관리</h3>
-<div class="container">
-<div class="card" style="width: 18rem;" th:each="program: ${programList}">
-  <img th:src="@{/img/board/img_3.png}" class="card-img-top" alt="...">
-  <div class="card-body">  
-    <h5 class="card-title" th:text="${program.title}">Card title</h5>
-    <a th:href="@{/program/detail(programNum=${program.programNum})}" class="btn btn-primary"  >프로그램 보기</a>
-    <a th:href="@{/program/review(programNum=${program.programNum})}" class="btn btn-primary"  >리뷰 보기</a>
- </div>
-</div>
-</div>
 
 
+	<h4 id="title" th:text="${ID + ' 호스트님의 평균 별점'}"></h4>
 
-
-
-<h3>예약현황</h3>	
-<h4>(게스트에 대한 리뷰)</h4>	
+	<div style="display: flex; align-items: center; ">
+		<!-- 별점 평균 계산 -->
+		<i class="fas fa-star" id="avgStar"></i>
+		<h4 id="title" th:text="${hostAvg}"></h4>
+	</div>
 	<table>
-			<tr th:each="reservation: ${reservation}">	 
+		<tr>
+			<th th:text="'리뷰 '+${#lists.size(hostReview) + '건'}"></th>
+		</tr>
+		<tr th:each="hostReview: ${hostReview}">
+			<th th:text="${hostReview.reviewerID}"></th>
+			<!-- 별점을 표현하는 Font Awesome 별 아이콘 -->
+			<td>
+				<div class="stars" th:each="star : ${#numbers.sequence(1, hostReview.stars)}">
+					<i class="fas fa-star"></i>
+				</div>
+			</td>
+			<td th:text="${hostReview.content}"> </td>
+		</tr>
+	</table>
+
+	<br><br>
+
+	<h4 id="title">내가 운영 중인 숙소</h4>
+	<div class="container">
+		<div class="card" style="width: 18rem;" th:each="program: ${programList}">
+			<a th:href="@{/program/detail(programNum=${program.programNum})}"
+				style="text-decoration: none; color: inherit;">
+				<img th:src="@{/img/board/img_3.png}" class="card-img-top" alt="...">
+				<div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
+					<h5 th:text="${program.title}"></h5>
+				</div>
+			</a>
+		</div>
+	</div>
+
+
+
+
+
+	<h3>예약현황</h3>
+	<h4>(게스트에 대한 리뷰)</h4>
+	<table>
+		<tr th:each="reservation: ${reservation}">
 			<th>프로그램 번호</th>
 			<td th:text="${reservation.programNum}"></td>
 			<td>
-				<a th:href="@{/program/accept(reserNum=${reservation.reserNum})}" 
-					th:text="accept"></a>
+				<a th:href="@{/program/accept(reserNum=${reservation.reserNum})}" th:text="accept"></a>
 			</td>
 			<td th:text="${reservation.inputdate}"></td>
 			<th>예약상태</th>
-			
+
 			<td th:switch="${reservation.status}">
-			    <p th:case="0">예약이 확인 대기 중입니다.</p>
-			    <p th:case="1">예약이 확인되었습니다.</p>
-			    <p th:case="2"><a th:href="@{/program/guestReview(reserNum=${reservation.reserNum})}" 
-					th:text="게스트리뷰작성하기"></a> </p>
-				<p th:case="3" >리뷰작성 완료</p>
-			    <p th:case="*" >알 수 없는 상태입니다.</p>
+				<p th:case="0">예약이 확인 대기 중입니다.</p>
+				<p th:case="1">예약이 확인되었습니다.</p>
+				<p th:case="2"><a th:href="@{/program/guestReview(reserNum=${reservation.reserNum})}"
+						th:text="게스트리뷰작성하기"></a> </p>
+				<p th:case="3">리뷰작성 완료</p>
+				<p th:case="*">알 수 없는 상태입니다.</p>
 			</td>
 		</tr>
 	</table>
 	<br>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+		crossorigin="anonymous"></script>
 
 </body>
+
 </html>
