--- a/src/main/resources/templates/member/myProgram.html
+++ b/src/main/resources/templates/member/myProgram.html
@@ -93,8 +93,13 @@
 	</table>
 
 	<br><br>
-
-	<h4 id="title">내가 운영 중인 숙소</h4>
+<div style="display: flex; 	justify-content: space-between;
+" >
+	<h4 id="title">운영 중인 숙소</h4>
+	<button type="button" class="btn btn-primary" 
+	th:onclick="|location.href='@{/program/request}'|">
+	예약현황</button>
+</div>
 	<div class="container">
 		<div class="card" style="width: 18rem;" th:each="program: ${programList}">
 			<a th:href="@{/program/detail(programNum=${program.programNum})}"
@@ -108,31 +113,6 @@
 	</div>
 
 
-
-
-
-	<h3>예약현황</h3>
-	<h4>(게스트에 대한 리뷰)</h4>
-	<table>
-		<tr th:each="reservation: ${reservation}">
-			<th>프로그램 번호</th>
-			<td th:text="${reservation.programNum}"></td>
-			<td>
-				<a th:href="@{/program/accept(reserNum=${reservation.reserNum})}" th:text="accept"></a>
-			</td>
-			<td th:text="${reservation.inputdate}"></td>
-			<th>예약상태</th>
-
-			<td th:switch="${reservation.status}">
-				<p th:case="0">예약이 확인 대기 중입니다.</p>
-				<p th:case="1">예약이 확인되었습니다.</p>
-				<p th:case="2"><a th:href="@{/program/guestReview(reserNum=${reservation.reserNum})}"
-						th:text="게스트리뷰작성하기"></a> </p>
-				<p th:case="3">리뷰작성 완료</p>
-				<p th:case="*">알 수 없는 상태입니다.</p>
-			</td>
-		</tr>
-	</table>
 	<br>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
