--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -63,6 +63,7 @@
 	<link rel="stylesheet" th:href="@{/css/main/list.css}">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+	 <link rel="stylesheet" th:href="@{/css/header_style.css}">
 
 
 </head>
