--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -72,15 +72,13 @@
 		</div>
 	</section>
 
-	<br><br>
+	<section sec:authorize="isAuthenticated()" class="board-container">
 
-	<section class="board-container">
+		<br><br>
+
 		<div class="board-title">
-			<h2 sec:authorize="isAuthenticated()">
+			<h2>
 				<span th:text="${#authentication.name} + '님을 위한 추천 프로그램'">00님을 위한 추천 프로그램</span>
-			</h2>
-			<h2 sec:authorize="!isAuthenticated()">
-				추천 프로그램
 			</h2>
 			<div class="add_link"><a th:href="@{/program/recommend}">더보기</a></div>
 		</div>
@@ -176,7 +174,7 @@
 	</section>
 
 	<section>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br
 	</section>
 </main>
 
