마이페이지 css

--- a/src/main/resources/templates/member/myBookmark.html
+++ b/src/main/resources/templates/member/myBookmark.html
@@ -38,16 +38,24 @@
 		}
 
 		#title {
-			font-size: 30px;
+			font-size: 25px;
 			font-weight: 600;
 
 		}
-		 .fa-bookmark {
-			color: gold;
-			font-size: 35px;
-
+		.container {
+			display: flex;
+			justify-content: left;
+			justify-content: flex-start;
+			flex-wrap: wrap;
 		}
 
+		.card {
+			/*  flex: 1;각 박스가 동일한 너비를 가지도록 */
+			margin: 10px;
+			width: 30%;
+
+		}
+		 
 	</style>
 	
 	<link rel="stylesheet" th:href="@{/css/main/write.css}">
@@ -57,12 +65,9 @@
 </head>
 
 <body>
-	<div style="display: flex; align-items: center; ">
-		 
-	
+ 		  
 <h4 id="title">내가 북마크한 숙소</h4>
-<i class="fas fa-regular fa-bookmark" style="margin-left: 15px;"></i>	</div> 
- 	<div class="container">
+  	<div class="container">
 		<div class="card" style="width: 18rem;" th:each="program: ${bookmarkList}">
 			<a th:href="@{/program/detail(programNum=${program.programNum})}"
 				style="text-decoration: none; color: inherit;">
