--- a/src/main/resources/templates/member/myProgram.html
+++ b/src/main/resources/templates/member/myProgram.html
@@ -42,7 +42,6 @@
 		#title {
 			font-size: 25px;
 			font-weight: 600;
-
 		}
 
 		.stars {
@@ -61,9 +60,13 @@
 			font-size: 35px;
 
 		}
+ 
+
 	</style>
 	<link rel="stylesheet" th:href="@{/css/main/write.css}">
 	<link rel="stylesheet" th:href="@{/css/main/detail.css}">
+	<link rel="stylesheet" th:href="@{/css/header_style.css}">
+
 </head>
 
 <body>
@@ -93,8 +96,7 @@
 	</table>
 
 	<br><br>
-<div style="display: flex; 	justify-content: space-between;
-" >
+<div style="display: flex; 	justify-content: space-between;" >
 	<h4 id="title">운영 중인 숙소</h4>
 	<button type="button" class="btn btn-primary" 
 	th:onclick="|location.href='@{/program/request}'|">
