--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -83,42 +83,24 @@
 			<div class="add_link"><a th:href="@{/program/recommend}">더보기</a></div>
 		</div>
 
-		<div class="board-card">
+		<div class="board-card" th:each="recommend : ${recommends}">
 			<article class="card-image">
-				<img th:src="@{/img/board/img_2.png}" alt="게시글 이미지">
+				<img th:src="${recommend.imagePath1}" alt="게시글 이미지">
 			</article>
 
 			<article class="card-content">
-				<div class="image-container-sub program-to-detail clickable">
-					<h2>서울의 전통과 현대가 어우러진 홈스테이 체험</h2>
+				<div class="image-container-sub program-to-detail clickable"
+					 th:data-programnum="${recommend.programNum}">
+					<h2 th:text="${recommend.title}">전주 한옥마을에서의 전통적 홈스테이</h2>
 				</div>
-				<p class="program-to-detail clickable"> 안녕하세요! 서울의 중심에서 전통과 현대 문화를 함께 체험할 수 있는 홈스테이 프로그램에 여러분을 초대합니다. 이 프로그램을 통해 한국의 역사적인 궁궐 방문, 전통 시장 탐방, 그리고 현대적인 강남 지역의 밤문화까지 다양한 체험을 할 수 있습니다. 서울의 한 가정과 함께 생활하며 진정한 한국의 가정 문화와 요리를 경험해보세요. 매주 주말에는 한복을 입고 경복궁을 방문하는 특별한 체험도 제공됩니다!</p>
+				<p class="program-to-detail clickable" th:text="${recommend.content}"
+				   th:data-programnum="${recommend.programNum}"></p>
 				<div class="content-article-footer">
 					<div class="tags">
 						<a class="tag clickable">#태그1</a>
 						<a class="tag clickable">#태그2</a>
 					</div>
-					<p>₩999,999</p>
-				</div>
-			</article>
-		</div>
-
-		<div class="board-card">
-			<article class="card-image">
-				<img th:src="@{/img/board/img_3.png}" alt="게시글 이미지">
-			</article>
-
-			<article class="card-content">
-				<div class="image-container-sub program-to-detail clickable">
-					<h2>부산의 해안가에서 즐기는 홈스테이</h2>
-				</div>
-				<p class="program-to-detail clickable"> 부산의 아름다운 해안가에서 특별한 홈스테이를 경험해보세요. 부산의 유명한 해운대와 광안리 해변을 방문하며, 해산물 시장에서 신선한 해산물도 맛볼 수 있습니다. 부산의 전통 가정집에서 홈스테이를 하며, 한국의 해양 문화와 지역 특색을 가까이에서 체험할 수 있습니다. 주말에는 부산의 유명한 템플스테이 프로그램에 참여하여 명상과 함께 한국의 불교 문화를 경험하는 시간도 가질 수 있습니다.</p>
-				<div class="content-article-footer">
-					<div class="tags">
-						<a class="tag clickable">#태그1</a>
-						<a class="tag clickable">#태그2</a>
-					</div>
-					<p>₩999,999</p>
+					<p><span>₩<span th:text="${#numbers.formatDecimal(recommend.price, 0, 'COMMA', 0, 'POINT')}"></p>
 				</div>
 			</article>
 		</div>
@@ -138,10 +120,12 @@
 			</article>
 
 			<article class="card-content">
-				<div class="image-container-sub program-to-detail clickable">
+				<div class="image-container-sub program-to-detail clickable"
+					 th:data-programnum="${popular.programNum}">
 					<h2 th:text="${popular.title}">전주 한옥마을에서의 전통적 홈스테이</h2>
 				</div>
-				<p class="program-to-detail clickable" th:text="${popular.content}"></p>
+				<p class="program-to-detail clickable" th:text="${popular.content}"
+				   th:data-programnum="${popular.programNum}"></p>
 				<div class="content-article-footer">
 					<div class="tags">
 						<a class="tag clickable">#태그1</a>
