자기소개구현, 카카오페이 결제확인화면 전까지 구현

--- a/src/main/resources/templates/member/joinForm.html
+++ b/src/main/resources/templates/member/joinForm.html
@@ -259,6 +259,12 @@ function uploadAndPreview() {
              </td>
           </tr>
           <tr>
+             <th>자기소개</th>
+             <td>
+                <input type="text" name="introduce" id="introduce" placeholder="자기소개">
+             </td>
+          </tr>
+          <tr>
             <th>프로필 사진</th>
                   <td>
                      <input type="file" name="upload" id="fileInput" onchange="uploadAndPreview()" accept="image/*">
