--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,7 +22,7 @@
 
 <!-- 헤더 섹션-->
 <header th:replace="layouts/header::header"></header>
-
+<!-- 채팅방 살려죠 -->
 <form action="/chat/createRoom" method="post">
     <input type="text" name="name" placeholder="채팅방 이름">
     <button type="submit" >방 만들기</button>
