--- a/src/main/resources/templates/program/payment.html
+++ b/src/main/resources/templates/program/payment.html
@@ -6,6 +6,10 @@
     <title>결제</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <!--카카오페이 jsp--> 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+	<script type="text/javascript" src="https://service.iamport.kr/js/iamport.payment-1.1.5.js"></script>
+   
 
 
     <link rel="stylesheet" th:href="@{/css/main/write.css}">
@@ -93,6 +97,10 @@
             <button type="submit">결제하기</button>
         </div>
     </form>
+            <form method="post" action="/kakaoPay">
+    			<button>카카오페이로 결제하기</button>
+			</form>
+    
 </main>
 
 <footer th:replace="layouts/footer::footer"></footer>
