인기 게시글 -  이미지

--- a/src/main/resources/static/css/main/home.css
+++ b/src/main/resources/static/css/main/home.css
@@ -97,3 +97,27 @@
 .pBoard-article {
     width : 45%;
 }
+
+.pBoard-article .image-container .image-wrapper {
+    overflow: hidden; /* 확대될 때 이미지가 넘치는 부분을 숨김 */
+    width: 100%;
+    margin: 10px;
+    position: relative;
+
+}
+
+.pBoard-article .image-container .image-wrapper::before {
+    content: '';
+    display: block;
+    padding-top: 75%; /* 16:9 비율 유지 */
+    pointer-events: none;
+}
+
+.pBoard-article .image-container .image-wrapper img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
