회원가입 폼

--- a/src/main/resources/templates/member/joinForm.html
+++ b/src/main/resources/templates/member/joinForm.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.thymeleaf.org">
+<html xmlns:th="thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<meta charset="utf-8">
+   <meta charset="UTF-8">
 <title>join</title>
+   <link rel="stylesheet" th:href="@{/css/member/joinForm.css}">
 </head>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
@@ -176,108 +178,112 @@ function uploadAndPreview() {
     }
 </script>
 <body>
-    <h1>회원가입</h1>
-   <!--onsubmit="return checkValid();"-->
-    <form th:action="@{/member/join}" method="post" enctype="multipart/form-data">
-       <table>
-          <tr>
-             <th>아이디</th>
-             <td>
-                <input type="text" name="userid" id="userid">
-                <!--readonly="readonly" onclick="idCheck();" placeholder="아이디를 입력"-->
-                <input type="button" value="ID중복검사" onclick="idCheck();">
-             </td>
-          </tr>
-          <tr>
-             <th>비밀번호</th>
-             <td>
-                <input type="password" name="password" id="password" placeholder="비밀번호 입력">
-             </td>
-          </tr>
-          <tr>
-             <th></th>
-             <td>
-                <input type="password" name="password2" id="password2" placeholder="비밀번호 재입력">
-             </td>
-          </tr>
-          <tr>
-             <th>이름</th>
-             <td>
-                <input type="text" name="name" id="name" placeholder="이름 입력">
-             </td>
-          </tr>
-         <!-- <tr>
-             <th>성별</th>
-             <td>
-                <input type="text" name="gender" id="gender" placeholder="성별 ex)남:m,여:f">
-             </td>
-          </tr> -->
-          <tr>
-             <th>성별</th>
-             <td>
-                <select id="gender" name="gender">
-					<option value="남자" th:selected="${gender} == 'male'">남자</option>
-					<option value="여자" th:selected="${gender} == 'female'">여자</option>
-				</select>
-             </td>
-          </tr>
-          <tr>
-             <th>생년월일</th>
-             <td>
-                <!--<input type="number" name="birth" id="birth" placeholder="숫자8자리 ex)20231211">-->
-                <form>
-      				<p><input type="date" name="birth" id="birth"></p>
-    			</form>
-             </td>
-          </tr>
-          <tr>
-             <th>전화번호</th>
-             <td>
-                <input type="text" name="phone" id="phone" placeholder="전화번호 입력">
-             </td>
-          </tr>
-<!--          <tr>
-             <th>주소</th>
-             <td>
-                <input type="text" name="address" id="address" placeholder="주소입력">
-             </td>
-          </tr>  -->
-          <tr>
-			  <th>주소</th>
-			  <td>
-			  	<input type="text" name="address_postcode" id="address_postcode" placeholder="우편번호">
-    		  	<input type="button" onclick="address()" value="우편번호 찾기"><br>
-    		  	<input type="text" name="address_address" id="address_address" placeholder="주소"><br>
-    		  	<input type="text" name="address_detailAddress" id="address_detailAddress" placeholder="상세주소">
-    		  	<input type="text" name="address_extraAddress" id="address_extraAddress" placeholder="참고항목">
-    		  </td>
-		  </tr>
-          <tr>
-             <th>이메일</th>
-             <td>
-                <input type="email" name="email" id="email" placeholder="이메일 입력">
-             </td>
-          </tr>
-          <tr>
-             <th>자기소개</th>
-             <td>
-                <input type="text" name="introduce" id="introduce" placeholder="자기소개">
-             </td>
-          </tr>
-          <tr>
-            <th>프로필 사진</th>
-                  <td>
-                     <input type="file" name="upload" id="fileInput" onchange="uploadAndPreview()" accept="image/*">
-                      <br>
-                      <img id="preview" src="#" alt="Preview" style="max-width: 170px; max-height: 170px;">
-                  </td>
-         </tr>
-          <tr>
-            <td colspan="2">
-               <input type="submit" value="가입">
-            </td>
-         </tr>
-       </table>
-    </form>
+   <header th:replace="layouts/header::header"></header>
+
+    <main>
+       <h1>회원가입</h1>
+       <!--onsubmit="return checkValid();"-->
+       <form th:action="@{/member/join}" method="post" enctype="multipart/form-data">
+          <table>
+             <tr>
+                <th>아이디</th>
+                <td>
+                   <input type="text" name="userid" id="userid">
+                   <!--readonly="readonly" onclick="idCheck();" placeholder="아이디를 입력"-->
+                   <input type="button" value="ID중복검사" onclick="idCheck();">
+                </td>
+             </tr>
+             <tr>
+                <th>비밀번호</th>
+                <td>
+                   <input type="password" name="password" id="password" placeholder="비밀번호 입력">
+                </td>
+             </tr>
+             <tr>
+                <th></th>
+                <td>
+                   <input type="password" name="password2" id="password2" placeholder="비밀번호 재입력">
+                </td>
+             </tr>
+             <tr>
+                <th>이름</th>
+                <td>
+                   <input type="text" name="name" id="name" placeholder="이름 입력">
+                </td>
+             </tr>
+             <!-- <tr>
+                 <th>성별</th>
+                 <td>
+                    <input type="text" name="gender" id="gender" placeholder="성별 ex)남:m,여:f">
+                 </td>
+              </tr> -->
+             <tr>
+                <th>성별</th>
+                <td>
+                   <select id="gender" name="gender">
+                      <option value="남자" th:selected="${gender} == 'male'">남자</option>
+                      <option value="여자" th:selected="${gender} == 'female'">여자</option>
+                   </select>
+                </td>
+             </tr>
+             <tr>
+                <th>생년월일</th>
+                <td>
+                   <!--<input type="number" name="birth" id="birth" placeholder="숫자8자리 ex)20231211">-->
+                   <form>
+                      <p><input type="date" name="birth" id="birth"></p>
+                   </form>
+                </td>
+             </tr>
+             <tr>
+                <th>전화번호</th>
+                <td>
+                   <input type="text" name="phone" id="phone" placeholder="전화번호 입력">
+                </td>
+             </tr>
+             <!--          <tr>
+                          <th>주소</th>
+                          <td>
+                             <input type="text" name="address" id="address" placeholder="주소입력">
+                          </td>
+                       </tr>  -->
+             <tr>
+                <th>주소</th>
+                <td>
+                   <input type="text" name="address_postcode" id="address_postcode" placeholder="우편번호">
+                   <input type="button" onclick="address()" value="우편번호 찾기"><br>
+                   <input type="text" name="address_address" id="address_address" placeholder="주소"><br>
+                   <input type="text" name="address_detailAddress" id="address_detailAddress" placeholder="상세주소">
+                   <input type="text" name="address_extraAddress" id="address_extraAddress" placeholder="참고항목">
+                </td>
+             </tr>
+             <tr>
+                <th>이메일</th>
+                <td>
+                   <input type="email" name="email" id="email" placeholder="이메일 입력">
+                </td>
+             </tr>
+             <tr>
+                <th>자기소개</th>
+                <td>
+                   <input type="text" name="introduce" id="introduce" placeholder="자기소개">
+                </td>
+             </tr>
+             <tr>
+                <th>프로필 사진</th>
+                <td>
+                   <input type="file" name="upload" id="fileInput" onchange="uploadAndPreview()" accept="image/*">
+                   <br>
+                   <img id="preview" src="#" alt="Preview" style="max-width: 170px; max-height: 170px;">
+                </td>
+             </tr>
+             <tr>
+                <td colspan="2">
+                   <input type="submit" value="가입">
+                </td>
+             </tr>
+          </table>
+       </form>
+    </main>
 </body>
 </html>
