--- a/src/main/resources/static/css/member/joinForm.css
+++ b/src/main/resources/static/css/member/joinForm.css
@@ -1,37 +1,30 @@
-body {
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-    color: #333;
-}
-
 main {
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+main h1 {
     color: #444;
     text-align: center;
 }
 
-table {
+main table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
 }
 
-th, td {
+main th, main td {
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid #ddd;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="date"],
-select {
+main input[type="text"],
+main input[type="password"],
+main input[type="email"],
+main input[type="date"],
+main select {
     width: 100%;
     padding: 8px;
     margin: 5px 0 15px 0;
@@ -41,7 +34,7 @@ select {
     border-radius: 4px;
 }
 
-input[type="submit"] {
+main input[type="submit"] {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -52,11 +45,11 @@ input[type="submit"] {
     border-radius: 4px;
 }
 
-input[type="submit"]:hover {
+main input[type="submit"]:hover {
     background-color: #45a049;
 }
 
-input[type="button"] {
+main input[type="button"] {
     background-color: #008CBA;
     color: white;
     padding: 10px 15px;
@@ -66,11 +59,11 @@ input[type="button"] {
     border-radius: 4px;
 }
 
-input[type="button"]:hover {
+main input[type="button"]:hover {
     background-color: #007B9A;
 }
 
-img#preview {
+main img#preview {
     display: block;
     margin-top: 10px;
 }
