--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -16,20 +16,25 @@
 
 <main>
 	<section class="board-container">
-		<div class="board-title">
-			<h2>인기 게시글</h2>
-		</div>
+        <div class="board-title">
+            <h2>인기 게시글</h2>
+        </div>
 
-		<div class="board-card">
-			<article class="card-image">
-				<img th:src="@{/img/board/img.png}" alt="게시글 1">
-			</article>
+        <div class="pBoard-container">
+            <article class="pBoard-article" th:each="popularBoards : ${popularBoards}">
+                <div class="image-container">
+                    <div class="image-wrapper">
+                        <img th:src="${popularBoards.imagePath1}" alt="이미지1">
+                    </div>
+                </div>
 
-			<article class="card-image">
-				<img th:src="@{/img/board/img_1.png}" alt="게시글 2">
-			</article>
-		</div>
-	</section>
+                <div class="image-container-sub program-to-detail clickable"
+                     th:data-programnum="${popularBoards.boardNum}">
+                    <h4 th:text="${popularBoards.title}">프로그램 이름</h4>
+                </div>
+            </article>
+        </div>
+    </section>
 
 	<br><br>
 	<hr>
